# f1rma

./: Cargo.toml  README.md  claude_desktop_config.json
src/: app.rs  main.rs
src/core/: annotations.rs  crypto.rs  file_ops.rs  mod.rs  profile.rs  search.rs
src/mcp/: main.rs  protocol.rs  tools.rs
src/network/: client.rs  discovery.rs  mod.rs  permissions.rs  server.rs  share.rs
src/ui/: footer.rs  header.rs  main_panel.rs  mod.rs  network_panel.rs  preview_panel.rs  tree_panel.rs
