[package]
name = "f1rma"
version = "0.1.0"
edition = "2021"
description = "Gerenciador de arquivos com perfis, compartilhamento em rede e anotações"
authors = ["Lucas Teixeira"]

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["all_loaders"] }
image = { version = "0.25", features = ["png", "jpeg", "gif", "bmp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
notify = "7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
directories = "5"
open = "5"
trash = "5"
rfd = "0.15"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
hostname = "0.4"
whoami = "1"
local-ip-address = "0.6"
warp = "0.3"
reqwest = { version = "0.12", features = ["json"] }
arboard = "3"
log = "0.4"
env_logger = "0.11"
mdns-sd = "0.11"
flume = "0.11"

[profile.release]
opt-level = 3
lto = true
